# AurumProject

./: Aurum.html  app.py  aurum.css  aurum.sql  main.tex  messages.pot  models.py  pyproject.toml  requirements.txt  setup_conquistas.py  setup_conteudo.py  setup_modulos.py  setup_poderes.py  setup_tarefas.py
AurumProject/: Aurum.html  Dockerfile  app.py  aurum.sql  babel.cfg  loja.html  messages.pot  models.py  pyproject.toml  requirements.txt  setup_conquistas.py  setup_conteudo.py  setup_modulos.py  setup_tarefas.py
AurumProject/AurumProject/codigo/: Aurum.html  a.css  a.htlm.html  cadastro.html  ranking.html
AurumProject/codigo/: a.css  a.htlm.html  app.py  cadastro.html  login.html  ranking.html
AurumProject/codigo/css/: aurum.css
AurumProject/codigo/templates/: a.html  cadastro.html  ranking.html
AurumProject/setup/: setup_conquistas.py  setup_conteudo.py  setup_modulos.py  setup_tarefas.py
AurumProject/static/: quiz.css
AurumProject/static/css/: ajuda.css  aurum.css  configuracoes.css  enviarticket.css  feedback.css  modulo.css  perguntasEntrada.css  popup.css  quiz.css  recompensa.css  senha.css
AurumProject/static/js/: aurum.js  (+8 more)
AurumProject/templates/: Aurum.html  a.html  ajuda.html  amigos.html  cadastro.html  configuracoes.html  enviarticket.html  esquecisenha.html  falha.html  introducao.html  licoes.html  login.html  loja.html  modulo.html  modulo1.html  modulo2.html  modulo3.html  modulos.html  perfil.html  perguntasEntrada.html  preentrada.html  privacidade.html  quizes.html  ranking.html  redefinirsenha.html  sucesso.html  termos.html
(+65 files in other folders)
