[project]
name = "aurum"
version = "0.1.0"
description = "Aplicação Flask com sistema de usuários, módulos, tarefas e premiações."
authors = [
    { name = "Arthur", email = "seu-email@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
    "flask>=3.0.0",
    "flask_sqlalchemy>=3.1.1",
    "flask_cors>=4.0.0",
    "werkzeug>=3.0.0"
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "isort"
]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

